--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bmcli-logger",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"license": "MIT",
@@ -17,6 +17,10 @@
 		"logging",
 		"loglevel"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ferudinato/bmcli-logger"
+	},
 	"files": [
 		"dist"
 	],
